582864 continue upgrading tests from junit 3 to 4